Bug 543799 - [12] NPE in SwitchStatement.reportMixingCaseTypes() (bogusly called)
Change-Id: I603377666c4f8360b885055774176409176f3442